# hummus

./: .gitignore  hummus.cabal
examples/: conditions.hms  fib.hms  generators.hms  objects.hms
kernel/: boot.hms  class.hms  condition.hms  generator.hms  object.hms  record.hms
src/: Main.hs
src/Control/Monad/: CC.hs  LICENSE
src/Control/Monad/CC/: Cursor.hs  Dynvar.hs  Prompt.hs  Seq.hs
src/Hummus/: Parser.hs  Prelude.hs  Runtime.hs  Types.hs
