name:                hummus
version:             0.1
synopsis:            A dialect of the Kernel programming language.
-- description:
license:             BSD3
license-file:        LICENSE
author:              Alex Suraci
maintainer:          i.am@toogeneric.com
-- copyright:
category:            Language
build-type:          Simple
cabal-version:       >=1.8

data-files:          kernel/*.hms

executable hummus
  hs-source-dirs:    src
  main-is:           Main.hs

  ghc-options:       -Wall -threaded -fno-warn-unused-do-bind

  other-modules:
    Hummus.Types,
    Hummus.Parser,
    Hummus.Runtime,
    Hummus.Prelude

  build-depends:
    attoparsec,
    base,
    bytestring,
    CC-delcont,
    filepath,
    haskeline,
    hashtables,
    mtl,
    time
