name:                hummus
version:             0.1
synopsis:            A dialect of the Kernel programming language.
-- description:
license:             BSD3
license-file:        LICENSE
author:              Alex Suraci
maintainer:          i.am@toogeneric.com
-- copyright:
category:            Language
build-type:          Simple
cabal-version:       >=1.8

data-files:          kernel/*.hms

executable hummus
  hs-source-dirs:    src
  main-is:           Main.hs

  ghc-prof-options:  -prof -auto-all -caf-all
  ghc-options:       -Wall -threaded -fno-warn-unused-do-bind -rtsopts

  other-modules:
    Control.Monad.CC,
    Control.Monad.CC.Cursor,
    Control.Monad.CC.Dynvar,
    Control.Monad.CC.Prompt,
    Control.Monad.CC.Seq,
    Hummus.Types,
    Hummus.Parser,
    Hummus.Runtime,
    Hummus.Prelude

  build-depends:
    attoparsec,
    base,
    bytestring,
    filepath,
    haskeline,
    hashtables,
    mtl,
    time
